<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/tvCode2"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="392dp"
        android:background="@drawable/textviewborder"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/code"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:textAlignment="textStart"
        android:textColor="#008323"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="phone"
        android:id="@+id/tvPhone"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/textviewborder"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/phone"
        android:paddingStart="10sp"
        android:textColor="#008323"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <EditText
        android:id="@+id/tvName"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/textviewborder"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="10sp"
        android:textAlignment="textStart"
        android:textColor="#008323"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Information"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <Button
        android:id="@+id/btSend"
        android:layout_width="119dp"
        android:layout_height="39dp"
        android:layout_marginTop="188dp"
        android:background="@drawable/buttonsend"
        android:fontFamily="sans-serif"
        android:text="@string/send"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <ProgressBar
        android:id="@+id/pbMain"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="86dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSend" />
</androidx.constraintlayout.widget.ConstraintLayout>